# CleanGenAI

./: .gitignore  Dockerfile  README.md  api.py  app.py  evaluate.py  inference.py  nginx.conf  openenv.yaml  pyproject.toml  requirements.txt  start.sh  test_reset.py
data/: expected_easy.csv  expected_medium.csv  raw_easy.csv  raw_hard.csv  raw_medium.csv
env/: actions.py  environment.py  grader.py  observation.py  tasks.py
server/: app.py
